<resources>
    <string name="app_name">DataBindingExample</string>

    <string name="temp">Current Temp:</string>
    <string name="condtions">Current Conditions:</string>
    <string name="wind_chill">Wind Chill:</string>

    <string name="btnSimpleBind">Simple Binding</string>
    <string name="btnObservable">Observables Binding</string>
    <string name="feels_like">Feels like: </string>
    <string name="btnViewmodel">View Model Binding</string>
    <string name="title_activity_view_mod_example">ViewModExample</string>
    <string name="edit_temp">Change the temperature:</string>
    <string name="edit_windchill">Change the windchill:</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="tempInF">"Temp. in F: "</string>
    <string name="twowaybind">Two Way Binding</string>

</resources>